<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    tools:context=".NotesActivity">

    <TextView
        android:id="@+id/tv_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="80dp"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/tv_log_in"
        app:startIconDrawable="@drawable/ic_baseline_person_24"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/log_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_background"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="35dp"
        app:counterTextColor="@color/black"
        app:endIconMode="password_toggle"
        app:helperText="*required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/log_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_background"
            android:inputType="textPassword"
            android:hint="@string/enter_your_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_log_in"
        style="@style/TextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:paddingStart="35dp"

        android:paddingEnd="35dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/forget_password_log_in"
        app:layout_constraintEnd_toEndOf="@id/btn_log_in"
        app:layout_constraintStart_toStartOf="@id/btn_log_in"
        app:layout_constraintTop_toBottomOf="@id/btn_log_in" />

    <TextView
        android:id="@+id/tv_want_to_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_want_to_sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_password" />


</androidx.constraintlayout.widget.ConstraintLayout>